--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 hyper = "1.5.2"
+reqwest = { version = "0.12.12", features = ["json"] }
+rocket = "0.5.1"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.135"
