--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 hyper = "1.5.2"
+lazy_static = "1.5.0"
 reqwest = { version = "0.12.12", features = ["json"] }
 rocket = "0.5.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
+tokio = { version = "1.43.0", features = ["full"] }
